<resources>
    <string name="app_name">Prime or OddEven Number</string>
    <!--Title-->
    <string name="mainTitle">Check For</string>
    <string name="subTitle">Prime or Odd/Even</string>
    <!--Input-->
    <string name="inputTitle">Enter a number</string>
    <string name="inputHint">Integer</string>

    <!--Buttons-->
    <string name="btnOddEven">Odd/Even</string>
    <string name="btnPrime">Prime</string>

    <!--Output-->
    <string name="outputTitle">Answer</string>

</resources>