<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/mainTitle"
        android:textAlignment="center"
        android:textColor="@color/appText"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appSubTitle"
        android:layout_width="219dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="592dp"
        android:text="@string/subTitle"
        android:textAlignment="center"
        android:textColor="@color/appText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appMainTitle"
        app:layout_constraintVertical_bias="0.157" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputCard"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appSubTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/inputTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/inputTitle"
                android:textAlignment="center"
                android:textColor="@color/cardText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputField"
                android:layout_width="233dp"
                android:layout_height="51dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/inputHint"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/cardText"
                android:textColorHighlight="@color/cardText"
                android:textColorHint="@color/cardHint"
                android:textColorLink="@color/cardText"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputTitle"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnOddEven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/buttonBackground"
                android:text="@string/btnOddEven"
                android:textAlignment="center"
                android:textColor="@color/buttonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnPrime"
                app:layout_constraintHorizontal_bias="0.692"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputField"
                app:layout_constraintVertical_bias="0.241" />

            <Button
                android:id="@+id/btnPrime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/buttonBackground"
                android:text="@string/btnPrime"
                android:textAlignment="center"
                android:textColor="@color/buttonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputField"
                app:layout_constraintVertical_bias="0.538" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/outputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/outputTitle"
        android:textAlignment="center"
        android:textColor="@color/appText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/outputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCard"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/outputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:textColor="@color/appText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>